--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
 /* Main Body Styling */
 
+.wrapper {
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;  
+    padding: 5px;
+}
+
 body {
     background-color: lightskyblue;
 }
@@ -18,6 +25,8 @@ dt {
 dd {
     margin-left: 0;
 }
+
+/* Image Styling and Float */
 
 img {
     max-width: 150px;
